--- a/AirPLaylistReport/AirPLaylistReport.csproj
+++ b/AirPLaylistReport/AirPLaylistReport.csproj
@@ -70,6 +70,9 @@
     <StartupObject>
     </StartupObject>
   </PropertyGroup>
+  <PropertyGroup>
+    <Win32Resource>D:\Projects\ProjectC\Playlist\Res.res</Win32Resource>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
